// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddCenter /> Rendering: should redirect to centers page if center is successfully added 1`] = `
<Redirect
  push={false}
  to="/centers2"
/>
`;

exports[`<AddCenter /> Rendering: should redirect to login page if user is not authenticated 1`] = `
<Redirect
  push={false}
  to="/users/login"
/>
`;

exports[`<AddCenter /> Rendering: should render correctly on page load 1`] = `
<div
  className="add-center-container"
>
  <UserTopNav
    dispatch={[Function]}
    isAdmin={true}
    isSuperAdmin={false}
    name="test-user"
    title="Add a center"
  />
  <div
    className="container-fluid"
  >
    <div
      className="row"
    >
      <UserSideNav
        dispatch={[Function]}
        isAdmin={true}
        isSuperAdmin={false}
        name="test-user"
      />
      <div
        className="col-lg-10 offset-md-2"
        id="add-event-section"
      >
        <Header
          text="Add a center"
        />
        <form
          className="mt-lg-5 mb-md-5"
        >
          <LoadingIcon
            size={2}
            start={false}
          />
          <div
            className="w-lg-50 mx-auto"
          >
            <WarningAlert
              message={false}
            />
          </div>
          <div
            className="container"
          >
            <div
              className="row"
            >
              <div
                className="col-12 col-lg-6"
              >
                <div
                  className="form-group"
                >
                  <label
                    htmlFor="name"
                  >
                    Name
                  </label>
                  <input
                    className="form-control"
                    id="name"
                    name="name"
                    onChange={[Function]}
                    placeholder="The name of the center"
                    type="email"
                  />
                  <small
                    className="form-text text-muted"
                  >
                    Less than 30 characters
                  </small>
                </div>
              </div>
              <div
                className="col-12 col-lg-6"
              >
                <div
                  className="form-group"
                >
                  <label
                    htmlFor="location"
                  >
                    Location
                  </label>
                  <input
                    className="form-control"
                    id="location"
                    name="location"
                    onChange={[Function]}
                    placeholder="The location of the center"
                    type="text"
                  />
                  <small
                    className="form-text text-muted"
                  >
                    Less than 30 characters
                  </small>
                </div>
              </div>
            </div>
            <div
              className="row"
            >
              <div
                className="col-12 col-lg-6"
              >
                <div
                  className="form-group"
                >
                  <label
                    htmlFor="details"
                  >
                    Details
                  </label>
                  <textarea
                    className="form-control"
                    id="details"
                    name="details"
                    onChange={[Function]}
                    placeholder="More details about the center"
                    rows="7"
                  />
                  <small
                    className="form-text text-muted"
                  >
                    Less than 300 characters
                  </small>
                </div>
              </div>
              <div
                className="col-12 col-lg-6"
              >
                <div
                  className="row"
                >
                  <div
                    className="col-12"
                  >
                    <div
                      className="form-group"
                    >
                      <label
                        htmlFor="capacity"
                      >
                        Capacity
                      </label>
                      <input
                        className="form-control"
                        id="capacity"
                        name="capacity"
                        onChange={[Function]}
                        placeholder="How many seats"
                        type="number"
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="row"
                >
                  <div
                    className="col-12"
                  >
                    <div
                      className="form-group"
                    >
                      <label
                        htmlFor="price"
                      >
                        Price
                      </label>
                      <input
                        className="form-control"
                        id="price"
                        name="price"
                        onChange={[Function]}
                        placeholder="Price"
                        type="number"
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="row"
                >
                  <div
                    className="col-12"
                  >
                    <div
                      className="form-group"
                    >
                      <label
                        htmlFor="image"
                      >
                        Image
                      </label>
                      <div
                        className="text-center"
                      >
                        <ImageInput
                          id="image"
                          newImage={null}
                          onDrop={[Function]}
                          style={
                            Object {
                              "height": "100px",
                            }
                          }
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    className="ml-3 pt-3"
                  >
                    <button
                      className="btn btn-outline-dark"
                      disabled={false}
                      id="add-btn"
                      onClick={[Function]}
                    >
                      Add
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
  <footer
    className="d-block d-sm-none mt-5"
  >
    <div
      className="container text-white text-center py-5"
    >
      <h1>
        Ievents
      </h1>
      <p>
        Copyright © 2017
      </p>
    </div>
  </footer>
</div>
`;

exports[`<AddCenter /> Rendering: should render correctly when there is an error 1`] = `
<div
  className="add-center-container"
>
  <UserTopNav
    dispatch={[Function]}
    isAdmin={true}
    isSuperAdmin={false}
    name="test-user"
    title="Add a center"
  />
  <div
    className="container-fluid"
  >
    <div
      className="row"
    >
      <UserSideNav
        dispatch={[Function]}
        isAdmin={true}
        isSuperAdmin={false}
        name="test-user"
      />
      <div
        className="col-lg-10 offset-md-2"
        id="add-event-section"
      >
        <Header
          text="Add a center"
        />
        <form
          className="mt-lg-5 mb-md-5"
        >
          <LoadingIcon
            size={2}
            start={false}
          />
          <div
            className="w-lg-50 mx-auto"
          >
            <WarningAlert
              message="there was an error"
            />
          </div>
          <div
            className="container"
          >
            <div
              className="row"
            >
              <div
                className="col-12 col-lg-6"
              >
                <div
                  className="form-group"
                >
                  <label
                    htmlFor="name"
                  >
                    Name
                  </label>
                  <input
                    className="form-control"
                    id="name"
                    name="name"
                    onChange={[Function]}
                    placeholder="The name of the center"
                    type="email"
                  />
                  <small
                    className="form-text text-muted"
                  >
                    Less than 30 characters
                  </small>
                </div>
              </div>
              <div
                className="col-12 col-lg-6"
              >
                <div
                  className="form-group"
                >
                  <label
                    htmlFor="location"
                  >
                    Location
                  </label>
                  <input
                    className="form-control"
                    id="location"
                    name="location"
                    onChange={[Function]}
                    placeholder="The location of the center"
                    type="text"
                  />
                  <small
                    className="form-text text-muted"
                  >
                    Less than 30 characters
                  </small>
                </div>
              </div>
            </div>
            <div
              className="row"
            >
              <div
                className="col-12 col-lg-6"
              >
                <div
                  className="form-group"
                >
                  <label
                    htmlFor="details"
                  >
                    Details
                  </label>
                  <textarea
                    className="form-control"
                    id="details"
                    name="details"
                    onChange={[Function]}
                    placeholder="More details about the center"
                    rows="7"
                  />
                  <small
                    className="form-text text-muted"
                  >
                    Less than 300 characters
                  </small>
                </div>
              </div>
              <div
                className="col-12 col-lg-6"
              >
                <div
                  className="row"
                >
                  <div
                    className="col-12"
                  >
                    <div
                      className="form-group"
                    >
                      <label
                        htmlFor="capacity"
                      >
                        Capacity
                      </label>
                      <input
                        className="form-control"
                        id="capacity"
                        name="capacity"
                        onChange={[Function]}
                        placeholder="How many seats"
                        type="number"
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="row"
                >
                  <div
                    className="col-12"
                  >
                    <div
                      className="form-group"
                    >
                      <label
                        htmlFor="price"
                      >
                        Price
                      </label>
                      <input
                        className="form-control"
                        id="price"
                        name="price"
                        onChange={[Function]}
                        placeholder="Price"
                        type="number"
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="row"
                >
                  <div
                    className="col-12"
                  >
                    <div
                      className="form-group"
                    >
                      <label
                        htmlFor="image"
                      >
                        Image
                      </label>
                      <div
                        className="text-center"
                      >
                        <ImageInput
                          id="image"
                          newImage={null}
                          onDrop={[Function]}
                          style={
                            Object {
                              "height": "100px",
                            }
                          }
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    className="ml-3 pt-3"
                  >
                    <button
                      className="btn btn-outline-dark"
                      disabled={false}
                      id="add-btn"
                      onClick={[Function]}
                    >
                      Add
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
  <footer
    className="d-block d-sm-none mt-5"
  >
    <div
      className="container text-white text-center py-5"
    >
      <h1>
        Ievents
      </h1>
      <p>
        Copyright © 2017
      </p>
    </div>
  </footer>
</div>
`;

exports[`<AddCenter /> Rendering: should render correcty when adding 1`] = `
<div
  className="add-center-container"
>
  <UserTopNav
    dispatch={[Function]}
    isAdmin={true}
    isSuperAdmin={false}
    name="test-user"
    title="Add a center"
  />
  <div
    className="container-fluid"
  >
    <div
      className="row"
    >
      <UserSideNav
        dispatch={[Function]}
        isAdmin={true}
        isSuperAdmin={false}
        name="test-user"
      />
      <div
        className="col-lg-10 offset-md-2"
        id="add-event-section"
      >
        <Header
          text="Add a center"
        />
        <form
          className="mt-lg-5 mb-md-5"
        >
          <LoadingIcon
            size={2}
            start={true}
          />
          <div
            className="w-lg-50 mx-auto"
          >
            <WarningAlert
              message={false}
            />
          </div>
          <div
            className="container"
          >
            <div
              className="row"
            >
              <div
                className="col-12 col-lg-6"
              >
                <div
                  className="form-group"
                >
                  <label
                    htmlFor="name"
                  >
                    Name
                  </label>
                  <input
                    className="form-control"
                    id="name"
                    name="name"
                    onChange={[Function]}
                    placeholder="The name of the center"
                    type="email"
                  />
                  <small
                    className="form-text text-muted"
                  >
                    Less than 30 characters
                  </small>
                </div>
              </div>
              <div
                className="col-12 col-lg-6"
              >
                <div
                  className="form-group"
                >
                  <label
                    htmlFor="location"
                  >
                    Location
                  </label>
                  <input
                    className="form-control"
                    id="location"
                    name="location"
                    onChange={[Function]}
                    placeholder="The location of the center"
                    type="text"
                  />
                  <small
                    className="form-text text-muted"
                  >
                    Less than 30 characters
                  </small>
                </div>
              </div>
            </div>
            <div
              className="row"
            >
              <div
                className="col-12 col-lg-6"
              >
                <div
                  className="form-group"
                >
                  <label
                    htmlFor="details"
                  >
                    Details
                  </label>
                  <textarea
                    className="form-control"
                    id="details"
                    name="details"
                    onChange={[Function]}
                    placeholder="More details about the center"
                    rows="7"
                  />
                  <small
                    className="form-text text-muted"
                  >
                    Less than 300 characters
                  </small>
                </div>
              </div>
              <div
                className="col-12 col-lg-6"
              >
                <div
                  className="row"
                >
                  <div
                    className="col-12"
                  >
                    <div
                      className="form-group"
                    >
                      <label
                        htmlFor="capacity"
                      >
                        Capacity
                      </label>
                      <input
                        className="form-control"
                        id="capacity"
                        name="capacity"
                        onChange={[Function]}
                        placeholder="How many seats"
                        type="number"
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="row"
                >
                  <div
                    className="col-12"
                  >
                    <div
                      className="form-group"
                    >
                      <label
                        htmlFor="price"
                      >
                        Price
                      </label>
                      <input
                        className="form-control"
                        id="price"
                        name="price"
                        onChange={[Function]}
                        placeholder="Price"
                        type="number"
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="row"
                >
                  <div
                    className="col-12"
                  >
                    <div
                      className="form-group"
                    >
                      <label
                        htmlFor="image"
                      >
                        Image
                      </label>
                      <div
                        className="text-center"
                      >
                        <ImageInput
                          id="image"
                          newImage={null}
                          onDrop={[Function]}
                          style={
                            Object {
                              "height": "100px",
                            }
                          }
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    className="ml-3 pt-3"
                  >
                    <button
                      className="btn btn-outline-dark"
                      disabled={true}
                      id="add-btn"
                      onClick={[Function]}
                    >
                      Add
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
  <footer
    className="d-block d-sm-none mt-5"
  >
    <div
      className="container text-white text-center py-5"
    >
      <h1>
        Ievents
      </h1>
      <p>
        Copyright © 2017
      </p>
    </div>
  </footer>
</div>
`;
